--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="mask"></div>
+  <div id="mask"></div>
   <div class="loading">
     <div data-loader='satellite'></div>
   </div>
-  <div class="wrap"></div>
+  <div id="wrap"></div>
   <script src="script/album.js"></script>
 </body>
 </html>
